--- a/Archivos.ipynb
+++ b/Archivos.ipynb
@@ -2,56 +2,125 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "e0eb76a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word:\n",
+      "Antipatrones \n",
+      "y Patrones GRASP\n",
+      "\n",
+      "Antipatrones\n",
+      "\n",
+      "Excel:\n",
+      "None, None, None, None, None\n",
+      "sad, None, sa, sa, None\n",
+      "None, None, sa, a, asd\n",
+      "None, None, sa, None, None\n",
+      "None, None, a, sa, None\n",
+      "None, None, None, None, None\n",
+      "None, None, sa, None, None\n",
+      "PDF:\n",
+      " \n",
+      " \n",
+      "ARQUITECTURAS \n",
+      "DE SOFTWARE \n",
+      "¿Qué son? \n",
+      "En palabras de Software Engineering Institude (SEI) la arquitectura de \n",
+      "software se puede definir como “Las estructuras de un sistema, \n",
+      "compuestas de elementos con propiedades visibles de forma externa y las \n",
+      "relaciones que existen entre ellas.” [1] \n",
+      "En otras palabras, se entiende que una arquitectura de software hace \n",
+      "referencia a la relación entre las diferentes partes de un software. \n",
+      "Referencias: \n",
+      "[1] L. Bass, P. Clements, R. Kazman, Software Architecture in Practice, 2nd Edition, Addison Wesley, 2003 \n",
+      "[2] E. Novoseltseva (2021, Ener 2) Arquitectura De Software Y Sus Beneficios [Online]. Available: https://apiumhub.com \n",
+      "[3] E. Bello (2021, Dic 27) Framework: Qué es, para qué sirve y por qué deberías usarlo [Online]. Available: \n",
+      "https://www.iebschool.com \n",
+      "[4] R. Rails (2004, Agost) Ruby on Rails [Online]. Available: https://rubyonrails.org/ \n",
+      "[5] asp.net 2003, Ener) ASP.NET | Marco web de código abierto para .NET [Online]. Available: \n",
+      "https://dotnet.microsoft.com/es-es/apps/aspnet \n",
+      "[6] Angular (2016, Sep 14) Angular [Online]. Available: https://angular.io/ \n",
+      "Características \n",
+      "Es importante destacar la importancia de las arquitecturas de software ya \n",
+      "que gracias a estas se crea una base solida para el proyecto, a demás de \n",
+      "conseguir que nuestro desarrollo sea escalable y tenga un alto \n",
+      "rendimiento, a continuación, se presenten algunos beneficios de utilizar \n",
+      "arquitecturas de software. \n",
+      "• \n",
+      "Reduce los costes. \n",
+      "• \n",
+      "Mejor visibilidad del código.  \n",
+      "• \n",
+      "Reduce los porcentajes de fracaso.  \n",
+      "• \n",
+      "Reduce los tiempos. [2] \n",
+      "• \n",
+      "[2] \n",
+      "Frameworks \n",
+      "Se define como un entorno o \n",
+      "marco de trabajo el cual esta \n",
+      "estructurado por un conjunto de \n",
+      "practicas conceptos y criterios \n",
+      "estandarizados a seguir. [3] \n",
+      "Ejemplos \n",
+      "Ruby on Rails: Es un framework de código abierto el \n",
+      "cual está diseñado para seguir el patrón de \n",
+      "arquitectura modelo-vista-controlador. [4] \n",
+      "ASP.NET: Desarrollado por Microsoft para construir \n",
+      "servicios y páginas web, nos permite crear \n",
+      "aplicaciones escalables y de gran seguridad.[5]  \n",
+      "Angular: Desarrollado por Google, a diferencia de los \n",
+      "dos anteriores este trabaja con el patrón de \n",
+      "arquitectura MVVM (Model-View-ViewModel).[6] \n",
+      "Jaime Castañeda Dzul \n",
+      "21393134 \n",
+      "IDYGS73 \n",
+      "Arquitectura de software \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "import tkinter as tk\n",
-    "from tkinter import filedialog\n",
-    "from docx import Document #Documentos de word\n",
-    "import openpyxl\n",
-    "import fitz  # Importamos PyMuPDF\n",
+    "from docx import Document  # Documentos de Word\n",
+    "import openpyxl  # Documentos de Excel\n",
+    "import fitz  # Documentos PDF\n",
     "\n",
     "def abrir_archivo(tipo, archivo):\n",
     "    if tipo == \"Word\":\n",
     "        document = Document(archivo)\n",
+    "        print(\"Word:\")\n",
     "        for paragraph in document.paragraphs:\n",
     "            print(paragraph.text)\n",
     "    elif tipo == \"Excel\":\n",
-    "        workbook = openpyxl.load_workbook(archivo)\n",
-    "        sheet = workbook.active\n",
-    "        for row in sheet.iter_rows(values_only=True):\n",
-    "            print(\" \".join(map(str, row)))\n",
+    "        libro = openpyxl.load_workbook(archivo)\n",
+    "        hoja = libro.active\n",
+    "        print(\"Excel:\")\n",
+    "        for row in hoja.iter_rows(values_only=True):\n",
+    "            print(\", \".join(map(str, row)))\n",
     "    elif tipo == \"PDF\":\n",
     "        pdf_document = fitz.open(archivo)\n",
+    "        print(\"PDF:\")\n",
     "        for page_num in range(len(pdf_document)):\n",
     "            page = pdf_document[page_num]\n",
     "            text = page.get_text()\n",
     "            print(text)\n",
     "    else:\n",
-    "        print(\"Tipo de archivo no válido\")\n",
-    "#funcion para seleccionar archivo\n",
-    "def seleccionar_archivo():\n",
-    "    archivo = filedialog.askopenfilename(title=\"Seleccionar archivo\", filetypes=[(\"Archivos\", \"*.*\")])\n",
-    "    if archivo:\n",
-    "        tipo_archivo = archivo.split(\".\")[-1]\n",
-    "        if tipo_archivo == \"docx\":\n",
-    "            abrir_archivo(\"Word\", archivo)\n",
-    "        elif tipo_archivo == \"xlsx\":\n",
-    "            abrir_archivo(\"Excel\", archivo)\n",
-    "        elif tipo_archivo == \"pdf\":\n",
-    "            abrir_archivo(\"PDF\", archivo)\n",
-    "        else:\n",
-    "            print(\"Tipo de archivo no válido\")\n",
+    "        print(\"Introduce un archivo válido.\")\n",
     "\n",
-    "def main():\n",
-    "    root = tk.Tk()\n",
-    "    root.withdraw()  \n",
-    "    seleccionar_archivo()\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "\n",
+    "word = \"Antipatrones.docx\"\n",
+    "excel = \"Libro.xlsx\"\n",
+    "pdf = \"Infografia.pdf\"\n",
+    "\n",
+    "abrir_archivo(\"Word\", word)\n",
+    "abrir_archivo(\"Excel\", excel)\n",
+    "abrir_archivo(\"PDF\", pdf)\n"
    ]
   },
   {
